@@ -600,7 +600,11 @@ function affiliates_admin_referrals() {
 			$link = get_permalink( $result->post_id );
 			$title = get_the_title( $result->post_id );
 			$output .= '<td class="post_title"><a href="' . esc_attr( $link ) . '" target="_blank">' . wp_filter_nohtml_kses( $title ) . '</a></td>';
-			$output .= "<td class='name'>" . stripslashes( wp_filter_nohtml_kses( $result->name ) ) . "</td>";
+			$output .= sprintf(
+				"<td class='name'>%s [%d]</td>",
+				stripslashes( wp_filter_nohtml_kses( $result->name ) ),
+				esc_html( $result->affiliate_id )
+			);
 			$output .= sprintf(
 				'<td style="cursor:help" title="%s" class="amount">%s</td>',
 				esc_attr( $result->amount ),
